MDEV-25496 Assertion 'trx->bulk_insert' failed on INSERT

row_get_prebuilt_insert_row(): Remove some fallback code that had been
added in commit 8ea923f55b7666a359ac2c54f6c10e8609d16846 (MDEV-24818).
It seems that after all, statement boundaries are being reliably
indicated by ha_innobase::start_stmt() or
(for partitioned tables) ha_innobase::external_lock().